RESOLVED FIXED98148
[GTK] Value not returned warning with geolocation disabled
https://bugs.webkit.org/show_bug.cgi?id=98148
Summary [GTK] Value not returned warning with geolocation disabled
Adrian Perez
Reported 2012-10-02 04:45:57 PDT
[GTK] Value not returned warning with geolocation disabled
Attachments
Patch (1.64 KB, patch)
2012-10-02 05:00 PDT, Adrian Perez
no flags
Adrian Perez
Comment 1 2012-10-02 05:00:03 PDT
Xan Lopez
Comment 2 2012-10-02 05:03:57 PDT
Comment on attachment 166672 [details] Patch Bam!
WebKit Review Bot
Comment 3 2012-10-02 05:52:17 PDT
Comment on attachment 166672 [details] Patch Clearing flags on attachment: 166672 Committed r130159: <http://trac.webkit.org/changeset/130159>
WebKit Review Bot
Comment 4 2012-10-02 05:52:20 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.