[GTK] Value not returned warning with geolocation disabled https://bugs.webkit.org/show_bug.cgi?id=98148

Patch by Adrian Perez de Castro <aperez@igalia.com> on 2012-10-02
Reviewed by Xan Lopez.

With geolocation disabled in the build, return a sensible value from
DumpRenderTreeSupportGtk::numberOfPendingGeolocationPermissionRequests.
This also avoids a compiler warning.

* WebCoreSupport/DumpRenderTreeSupportGtk.cpp:
(DumpRenderTreeSupportGtk::numberOfPendingGeolocationPermissionRequests):

Canonical link: https://commits.webkit.org/116158@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@130159 268f45cc-cd09-0410-ab3c-d52691b4dbfc